--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								
 												
 <!-- load the d3.js library -->	
-<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.0.0/d3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
  
 <script>
  
@@ -785,6 +785,19 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("cx", x(parseDate("5/23/2017")))
     	.attr("cy", y(0.003476))
     	.attr("r", 5)
+        .on("mouseover", function(d) {		
+            div.transition()		
+                .duration(200)		
+                .style("opacity", .9);		
+            div	.html(formatTime(d.date) + "<br/>"  + d.close)	
+                .style("left", (d3.event.pageX) + "px")		
+                .style("top", (d3.event.pageY - 28) + "px");	
+            })					
+        .on("mouseout", function(d) {		
+            div.transition()		
+                .duration(500)		
+                .style("opacity", 0);	
+        });	
 	
 	// Add annotation
 	
@@ -801,6 +814,19 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("cx", x(parseDate("1/7/2018")))
     	.attr("cy", y(0.016763))
     	.attr("r", 5)
+        .on("mouseover", function(d) {		
+            div.transition()		
+                .duration(200)		
+                .style("opacity", .9);		
+            div	.html(formatTime(d.date) + "<br/>"  + d.close)	
+                .style("left", (d3.event.pageX) + "px")		
+                .style("top", (d3.event.pageY - 28) + "px");	
+            })					
+        .on("mouseout", function(d) {		
+            div.transition()		
+                .duration(500)		
+                .style("opacity", 0);	
+        });	
 	
 	// Add annotation
 	
@@ -817,6 +843,19 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("cx", x(parseDate("4/19/2018")))
     	.attr("cy", y(0.005818))
     	.attr("r", 5)
+        .on("mouseover", function(d) {		
+            div.transition()		
+                .duration(200)		
+                .style("opacity", .9);		
+            div	.html(formatTime(d.date) + "<br/>"  + d.close)	
+                .style("left", (d3.event.pageX) + "px")		
+                .style("top", (d3.event.pageY - 28) + "px");	
+            })					
+        .on("mouseout", function(d) {		
+            div.transition()		
+                .duration(500)		
+                .style("opacity", 0);	
+        });	
 	
 	// Add annotation
 	
@@ -833,6 +872,19 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("cx", x(parseDate("9/10/2018")))
     	.attr("cy", y(0.006851))
     	.attr("r", 5)
+        .on("mouseover", function(d) {		
+            div.transition()		
+                .duration(200)		
+                .style("opacity", .9);		
+            div	.html(formatTime(d.date) + "<br/>"  + d.close)	
+                .style("left", (d3.event.pageX) + "px")		
+                .style("top", (d3.event.pageY - 28) + "px");	
+            })					
+        .on("mouseout", function(d) {		
+            div.transition()		
+                .duration(500)		
+                .style("opacity", 0);	
+        });	
 	
 	// Add annotation
 	
@@ -849,6 +901,19 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("cx", x(parseDate("5/7/2021")))
     	.attr("cy", y(0.685335))
     	.attr("r", 5)
+        .on("mouseover", function(d) {		
+            div.transition()		
+                .duration(200)		
+                .style("opacity", .9);		
+            div	.html(formatTime(d.date) + "<br/>"  + d.close)	
+                .style("left", (d3.event.pageX) + "px")		
+                .style("top", (d3.event.pageY - 28) + "px");	
+            })					
+        .on("mouseout", function(d) {		
+            div.transition()		
+                .duration(500)		
+                .style("opacity", 0);	
+        });
 	
 	// Add annotation
 	
