--- a/index.html
+++ b/index.html
@@ -709,6 +709,18 @@ d3.csv("dogecoin1.csv", function(error, data) {
     												stroke: #fff;
 											}
 											.annotation { font: 12px Sans-Serif;)
+											div.tooltip {	
+											    position: absolute;			
+											    text-align: center;			
+											    width: 60px;					
+											    height: 28px;					
+											    padding: 2px;				
+											    font: 12px sans-serif;		
+											    background: lightsteelblue;	
+											    border: 0px;		
+											    border-radius: 8px;			
+											    pointer-events: none;			
+											}											
  
 											</style>
 										</q>
