--- a/index.html
+++ b/index.html
@@ -794,6 +794,8 @@ d3.csv("dogecoin1.csv", function(error, data) {
     	.attr("class", "tooltip")				
     	.style("opacity", 0);
 	
+	svgf.append(div);
+	
 	// Add point
 	svgf.append("circle")
     	.attr("class", "dot")
