--- a/index.html
+++ b/index.html
@@ -751,16 +751,20 @@ var	valueline = d3.svg.line()
 	.x(function(d) { return x(d.date); })
 	.y(function(d) { return y(d.PriceUSD); });
 
+	
+	// Define the div for the tooltip
+	var div = d3.select("q").append("div")	
+    	.attr("class", "tooltip")				
+    	.style("opacity", 0);
+    
+	
 // Adds the svg canvas
 var	svgf = d3.select("q")
 	.append("svg")
 		.attr("width", width + margin.left + margin.right + 200)
 		.attr("height", height + margin.top + margin.bottom + 200)
 	.append("g")
-		.attr("transform", "translate(" + margin.left + "," + margin.top + ")")
-	.append("div")
-		.attr("class", "tooltip")
-    		.style("opacity", 0);
+		.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
  
 // Get the data
 d3.csv("dogecoin1.csv", function(error, data) {
@@ -886,7 +890,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
                 .style("opacity", .9);		
             div	.html("WallStreetBets/Elon Musk")	
                 .style("left", (d3.event.pageX) + "px")		
-                .style("top", (d3.event.pageY - 150) + "px");	
+                .style("top", (d3.event.pageY - 28) + "px");	
             })					
         .on("mouseout", function(d) {		
             div.transition()		
