--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 											.annotation { font: 12px Sans-Serif;)
 											div.tooltip {	
 											    position: absolute;			
-											    text-align: center;								
+											    text-align: left;								
 											    padding: 2px;				
 											    font: 12px sans-serif;		
 											    background: lightsteelblue;	
