--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("2017 Crypto Boom")	
+            div	.html("2017 Crypto Boom<br>" +cx +"<br>$" +cy)	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
@@ -827,7 +827,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("Bitcoin breaks $19,783")	
+            div	.html("Bitcoin breaks $19,783<br>" +cx +"<br>$" +cy)	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
@@ -848,7 +848,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("Crypto markets rebound")	
+            div	.html("Crypto markets rebound<br>" +cx +"<br>$" +cy)	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
@@ -868,7 +868,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("Ethereum/Dogecoin bridge test")	
+            div	.html("Ethereum/Dogecoin bridge test<br>" +cx +"<br>$" +cy)	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
@@ -888,7 +888,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("WallStreetBets/Elon Musk")	
+            div	.html("WallStreetBets/Elon Musk<br>" +cx +"<br>$" +cy)	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
