--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("Crypto markets rebound<br>" +cx +"<br>$" +cy)	
+            div	.html("Crypto markets rebound<br>" +parseDate("4/19/2018") +"<br>$0.005818")	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
@@ -868,7 +868,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("Ethereum/Dogecoin bridge test<br>" +cx +"<br>$" +cy)	
+            div	.html("Ethereum/Dogecoin bridge test<br>" +parseDate("9/10/2018") +"<br>$0.006851")	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
@@ -888,7 +888,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
             div.transition()		
                 .duration(200)		
                 .style("opacity", .9);		
-            div	.html("WallStreetBets/Elon Musk<br>" +cx +"<br>$" +cy)	
+            div	.html("WallStreetBets/Elon Musk<br>" +parseDate("5/7/2021") +"<br>$0.685335")	
                 .style("left", (d3.event.pageX) + "px")		
                 .style("top", (d3.event.pageY - 28) + "px");	
             })					
