--- a/index.html
+++ b/index.html
@@ -684,6 +684,7 @@ d3.csv("dogecoin1.csv", function(error, data) {
 							<section id="graph" class="main special">
 								<header class="major">
 									<h2>Dogecoin Value since December 2013</h2>
+									<p>Hover over each point for more detail</p>
 								</header>
 								<ul class="content">
 										<span class="spotlight"> 
